[build-system]
build-backend = "pdm.backend"
requires = ["pdm-backend"]

[project]
authors = [{ email = "louismmx@gmail.com", name = "Louis Maddox" }]
classifiers = [
  "Development Status :: 6 - Mature",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Multimedia :: Graphics :: Graphics Conversion",
  "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
  "matplotlib",
  "msgspec>=0.18.6",
  "numpy>1.25",
  "opencv-python",
  "scipy",
  "sympy",
]
description = "Page dewarping and thresholding using a cubic sheet model."
keywords = [
  "computer vision",
  "cubic spline",
  "dewarping",
  "document scanning",
  "image correction",
  "image processing",
]
license = { text = "MIT" }
name = "page-dewarp"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.9"

[project.optional-dependencies]
dev = [
  "pdm-bump>=0.9.10",
  "pdm>=2.22.3",
  "pre-commit>=4.1.0",
  "pysnooper>=1.2.0",
  "pytest>=8.3.2",
  "towncrier>=24.8.0",
]
docs = [
  "livereload>=2.7.1",
  "mkdocs-extra-sass-mathshim>=0.1.0",
  "mkdocs-material[recommended,imaging]>=9.5.2",
  "mkdocs-section-index>=0.3.8",
  "mkdocs>=1.5.3",
  "mkdocstrings[python]>=0.24.0",
  "ruff>=0.9.5",
  "urllib3<2",
]

[project.scripts]
page-dewarp = "page_dewarp.__main__:main"

[project.urls]
Documentation = "https://page-dewarp.vercel.app/"
Homepage = "https://github.com/lmmx/page-dewarp"
Repository = "https://github.com/lmmx/page-dewarp.git"

# ------------------------------------------------------------------------------
# If you still use isort as a standalone (outside Ruff), keep [tool.isort].
# Otherwise you can remove the next section entirely.
# ------------------------------------------------------------------------------
[tool.isort]
known_first_party = ["page_dewarp"]

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
test = ["pytest>=7.4.0"]

[tool.pdm.scripts]
build-news = "bash news/scripts/build_changelog.sh"
erase-news = "rm -rf news/fragments"
refresh-changelog = "echo 'pdm run erase-news && pdm run write-news && pdm run build-news'"
version = "bash news/scripts/get_version.sh"
write-all-news = "bash news/scripts/version_based_changelog.sh all"
write-news = "bash news/scripts/version_based_changelog.sh next"

[tool.ruff]

[tool.ruff.lint]
ignore = ["C408", "C901", "D203", "D213", "E501", "E722", "E741"]
# Removed deprecated `ignore-init-module-imports`.
select = ["C", "D", "E", "F", "I", "UP", "W"]

[tool.ruff.lint.isort]
known-first-party = ["page_dewarp"]
lines-after-imports = 2

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E401", "F401"]

# ----------------------------------------------------------------------
# Tomlsort config (optional)
# ----------------------------------------------------------------------
[tool.tomlsort]
all = true
in_place = true
spaces_before_inline_comment = 2
spaces_indent_inline_array = 4
trailing_comma_inline_array = true

# ----------------------------------------------------------------------
# Towncrier config
# ----------------------------------------------------------------------
[tool.towncrier]
directory = "news/fragments/"
filename = "CHANGELOG.md"
issue_format = "[#{issue}](https://github.com/lmmx/page-dewarp/issues/{issue})"
package = "page_dewarp"
package_dir = "src/"
start_string = "<!-- insertion marker -->"
template = "news/towncrier_template.md"
title_format = "[v{version}](https://github.com/lmmx/page-dewarp/releases/tag/{version}) ({project_date})"
underlines = "-~^"

[[tool.towncrier.type]]
directory = "feature"
name = "Features & Improvements"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Bug Fixes"
showcontent = true

[[tool.towncrier.type]]
directory = "doc"
name = "Improved Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "packaging"
name = "Packaging & Build Process"
showcontent = true

[[tool.towncrier.type]]
directory = "dep"
name = "Dependencies"
showcontent = true

[[tool.towncrier.type]]
directory = "removal"
name = "Removals and Deprecations"
showcontent = true

[[tool.towncrier.type]]
directory = "refactor"
name = "Code Refactoring"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "Miscellany"
showcontent = true

# ------------------------------------------------------------------------------
# Ruff config moved under [tool.ruff.lint] to avoid deprecation warnings
# ------------------------------------------------------------------------------
