[build-system]
build-backend = "pdm.backend"
requires = ["pdm-backend"]

[dependency-groups]
build = ["maturin>=1.9.3", "patchelf>=0.17.2.4"]
debug = ["pysnooper>=1.2.0"]
dev = [
  "pdbpp>=0.11.7",
  "pdm-bump>=0.9.10",
  "pdm>=2.22.3",
  "pre-commit>=4.1.0",
  "pytest>=8.3.2",
  "towncrier>=24.8.0",
]
docs = ["mkdocstrings[python]>=1.0", "urllib3<2", "zensical>=0.0.11"]
jax = ["jax>=0.6.2"]
test = ["czkawka>=0.1.2", "inline-snapshot>=0.30.1", "pytest>=7.4.0"]

[project]
authors = [{ email = "louismmx@gmail.com", name = "Louis Maddox" }]
classifiers = [
  "Development Status :: 6 - Mature",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Multimedia :: Graphics :: Graphics Conversion",
  "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
  "matplotlib",
  "msgspec>=0.18.6",
  "numpy>1.25",
  "opencv-python",
  "scipy",
  "sympy",
]
description = "Page dewarping and thresholding using a cubic sheet model."
keywords = [
  "computer vision",
  "cubic spline",
  "dewarping",
  "document scanning",
  "image correction",
  "image processing",
]
license = { text = "MIT" }
name = "page-dewarp"
readme = "README.md"
requires-python = ">=3.10"
version = "0.2.2"

[project.scripts]
page-dewarp = "page_dewarp.__main__:main"

[project.urls]
Documentation = "https://page-dewarp.vercel.app/"
Homepage = "https://github.com/lmmx/page-dewarp"
Repository = "https://github.com/lmmx/page-dewarp.git"

[project.optional-dependencies]
jax = ["jax>=0.6.2"]

# ------------------------------------------------------------------------------
# If you still use isort as a standalone (outside Ruff), keep [tool.isort].
# Otherwise you can remove the next section entirely.
# ------------------------------------------------------------------------------
[tool.isort]
known_first_party = ["page_dewarp"]

[tool.pdm]
distribution = true

[tool.pdm.scripts]
build-news = "bash news/scripts/build_changelog.sh"
erase-news = "rm -rf news/fragments"
refresh-changelog = "echo 'pdm run erase-news && pdm run write-news && pdm run build-news'"
version = "bash news/scripts/get_version.sh"
write-all-news = "bash news/scripts/version_based_changelog.sh all"
write-news = "bash news/scripts/version_based_changelog.sh next"

[tool.inline-snapshot]
format-command = "ruff format --stdin-filename {filename}"

[tool.ruff]

[tool.ruff.lint]
ignore = ["C408", "C901", "D203", "D213", "E501", "E722", "E741"]
# Removed deprecated `ignore-init-module-imports`.
select = ["C", "D", "E", "F", "I", "UP", "W"]

[tool.ruff.lint.isort]
known-first-party = ["page_dewarp"]
lines-after-imports = 2

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E401", "F401"]

# ----------------------------------------------------------------------
# Towncrier config
# ----------------------------------------------------------------------
[tool.towncrier]
directory = "news/fragments/"
filename = "CHANGELOG.md"
issue_format = "[#{issue}](https://github.com/lmmx/page-dewarp/issues/{issue})"
package = "page_dewarp"
package_dir = "src/"
start_string = "<!-- insertion marker -->"
template = "news/towncrier_template.md"
title_format = "[v{version}](https://github.com/lmmx/page-dewarp/releases/tag/{version}) ({project_date})"
underlines = "-~^"

[[tool.towncrier.type]]
directory = "feature"
name = "Features & Improvements"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Bug Fixes"
showcontent = true

[[tool.towncrier.type]]
directory = "doc"
name = "Improved Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "packaging"
name = "Packaging & Build Process"
showcontent = true

[[tool.towncrier.type]]
directory = "dep"
name = "Dependencies"
showcontent = true

[[tool.towncrier.type]]
directory = "removal"
name = "Removals and Deprecations"
showcontent = true

[[tool.towncrier.type]]
directory = "refactor"
name = "Code Refactoring"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "Miscellany"
showcontent = true

[tool.uv]
default-groups = ["build", "dev", "jax", "test"]

[tool.uv.sources]
mdx-truly-sane-lists = { git = "https://github.com/radude/mdx_truly_sane_lists.git" }
